--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
