--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mui/x-date-pickers": "^6.19.4",
     "@supabase/supabase-js": "^2.39.7",
     "date-fns": "^2.30.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
