--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@mui/x-data-grid": "^6.19.4",
     "@mui/x-date-pickers": "^6.19.4",
     "@supabase/supabase-js": "^2.39.7",
+    "@types/papaparse": "^5.5.0",
     "date-fns": "^2.30.0",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
