--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
+    "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^6.22.0",
     "recharts": "^3.3.0"
   },
